<?xml version="1.0"?>
<package format="2">
  <name>fast16</name>
  <version>1.0.0</version>
  <description>The fast16 package</description>
  <maintainer email="eirikff@stud.ntnu.no">eirikff</maintainer>
  
  <license>RPG</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>